--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ body {
 }
 
 .wrapper {
-   max-width: 1920px;
+   max-width: 100%;
    margin: 0 auto;
 }
 
@@ -345,12 +345,11 @@ body {
    background-position: center center;
    background-size: 20%;
    background-color: rgba(240, 240, 240, 1);
+   margin: 0 auto;
 }
 
-.text {}
 
 .text>h1 {
-
    font-family: Gilroy;
    font-size: 54px;
    font-weight: 600;
@@ -371,7 +370,7 @@ body {
 }
 
 .container {
-   max-width: 1200px;
+   max-width: 1500px;
    margin: 0 auto;
 }
 
@@ -388,6 +387,7 @@ body {
 }
 
 .flex-left {
+   max-width: 100%;
    margin-right: 200px;
    margin-top: 120px;
    margin-left: -150px;
@@ -432,7 +432,7 @@ body {
 }
 
 .form>p {
-   width: 407px;
+   max-width: 407px;
    font-family: Gilroy;
    font-size: 16px;
    font-weight: 400;
@@ -440,6 +440,44 @@ body {
    letter-spacing: 0.01em;
    text-align: left;
    margin-bottom: 25px;
+   min-width: 100%;
+}
+
+.rate-text {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin-bottom: 44px;
+   margin-top: 50px;
+
+}
+
+.slider_flex_rate {
+   display: flex;
+   align-items: center;
+   gap: 10px;
+}
+
+.slider_rate {
+   display: flex;
+   width: 44px;
+   height: 44px;
+   padding: 12px;
+   justify-content: center;
+   align-items: center;
+   flex-shrink: 0;
+   border-radius: 10px;
+   border: 1px solid #E5E5E5;
+}
+
+.rate-text>h3 {
+   color: #999;
+   font-family: Gilroy;
+   font-size: 31px;
+   font-style: normal;
+   font-weight: 600;
+   line-height: 120%;
+   letter-spacing: 0.31px;
 }
 
 input[type="text"],
@@ -474,14 +512,15 @@ input[type="checkbox"] {
    border: 1px solid rgba(229, 229, 229, 1);
    border-radius: 15px;
    background-color: rgba(255, 255, 255, 1);
+   height: 600px;
 }
 
 .card-flex {
    display: flex;
    justify-content: center;
    gap: 30px;
-
 }
+
 
 .card-top {
    background-image: url(../img/photo.png);
@@ -490,7 +529,7 @@ input[type="checkbox"] {
    background-size: 50%;
    background-color: rgba(240, 240, 240, 1);
    height: 250px;
-   width: 357px;
+   max-width: 357px;
    padding: 10px 10px;
 }
 
@@ -506,12 +545,11 @@ input[type="checkbox"] {
    height: Hug (23px);
    padding: 2px 8px 2px 8px;
    border-radius: 5px;
-   gap: 10px;
    background: rgba(255, 255, 255, 1);
 }
 
 .card-top>p {
-   margin-top: 54%;
+   margin-top: 60%;
    padding-left: 15px;
    font-family: Gilroy;
    font-size: 22px;
@@ -572,8 +610,6 @@ input[type="checkbox"] {
    color: rgba(255, 255, 255, 1);
 }
 
-
-
 .sale>p:nth-child(2) {
    font-family: Gilroy;
    font-size: 14px;
@@ -584,7 +620,62 @@ input[type="checkbox"] {
    text-decoration: line-through;
 }
 
-@media (max-width: 768px) {
+.submenu {
+   list-style: none;
+
+   position: relative;
+   background-color: transparent;
+
+   display: none;
+}
+
+.submenu li {
+   padding: 8px;
+}
+
+
+.pagination {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 10px;
+   display: none;
+
+}
+
+.circle {
+   width: 10px;
+   height: 10px;
+   border-radius: 50%;
+   background: rgba(196, 196, 196, 1);
+   margin-bottom: 40px;
+}
+
+.circle:nth-child(odd) {
+   opacity: 0.6;
+}
+
+.tel1 {
+   display: none;
+}
+
+
+@media screen and (max-width:1550px) {
+   .flex-left {
+      margin-right: 100px;
+      margin-left: 0px;
+   }
+
+   .flex-right {
+      margin-right: 0px;
+   }
+
+   .card-top {
+      max-height: 100%;
+   }
+}
+
+@media screen and (max-width: 1030px) {
    .burger {
       display: flex;
    }
@@ -592,11 +683,13 @@ input[type="checkbox"] {
    .menu {
       display: none;
       flex-direction: column;
-      padding: 10px;
+      padding: 10px 0px;
       position: absolute;
-      top: 110px;
-      left: 26px;
+      top: 150px;
+      left: 0;
       width: 100%;
+      height: 100%;
+      background: rgba(229, 229, 229, 1);
    }
 
    .pin2 {
@@ -605,6 +698,7 @@ input[type="checkbox"] {
 
    .pin {
       display: flex;
+      padding-left: 10px;
    }
 
    .menu li {
@@ -631,5 +725,226 @@ input[type="checkbox"] {
    .img2 {
       display: block;
       margin-left: 10px;
+   }
+
+   .flex {
+      flex-direction: column;
+   }
+
+   .media1024 {
+      display: flex;
+      gap: 13px;
+   }
+
+   .slider_flex {
+      display: none;
+   }
+
+   .flex-left {
+      margin: 0 auto;
+   }
+
+   .flex-right {
+      margin: 47px auto 39px;
+   }
+
+   .form {
+      display: flex;
+      max-width: 100%;
+      padding: 25px 30px 30px 30px;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      gap: 25px;
+      border-radius: 15px;
+      background: #FFF;
+      max-height: 100%;
+   }
+
+   .info {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+   }
+
+   input[type="submit"] {
+      max-width: 168px;
+      max-height: 44px;
+      text-align: center;
+      padding: 0px 0px 0px 0px;
+      color: rgba(255, 255, 255, 1);
+      font-family: Gilroy;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 155%;
+      letter-spacing: 0.14px;
+   }
+
+   .flex-left {
+      margin: 0 30px;
+   }
+
+   .text>h1 {
+      color: #999;
+      font-family: Gilroy;
+      font-size: 36px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 120%;
+      letter-spacing: 0.36px;
+   }
+
+   .text>p {
+      color: #999;
+      font-family: Gilroy;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 155%;
+      letter-spacing: 0.16px;
+   }
+
+   .pagination {
+      display: flex;
+   }
+
+
+   .slider_flex_rate {
+      display: none;
+   }
+
+   .visa {
+      justify-content: space-between;
+   }
+
+   .card {
+      margin-bottom: 0;
+      height: 580px;
+   }
+
+   .card-top {
+      max-width: 557px;
+   }
+
+   .card-top>p {
+      margin-top: 44%;
+   }
+
+   .card-flex {
+      margin-bottom: 10px;
+   }
+
+
+   .rate-text {
+      justify-content: center;
+   }
+
+   .has-submenu {
+      border-bottom: 1px solid #000;
+      padding: 20px 0px;
+   }
+
+   .has-submenu>a:first-child {
+      color: #999;
+      font-family: Gilroy;
+      font-size: 28px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 120%;
+      letter-spacing: 0.28px;
+      padding-left: 10px;
+
+   }
+
+   .show {
+      display: block;
+   }
+
+   .show-submenu {
+      display: block;
+   }
+
+}
+
+@media screen and (max-width:768px) {
+   .form {
+      margin: 0 auto;
+      max-width: 650px;
+      max-height: 600px;
+      border: 1px solid #000;
+   }
+
+   input[type="text"],
+   input[type="number"] {
+      max-width: 290px;
+      height: 50px;
+
+   }
+}
+
+@media screen and (max-width:320px) {
+   .tel1 {
+      display: block;
+      padding-left: 10px;
+   }
+
+   .img2 {
+      display: none;
+   }
+
+   .tel {
+      display: none;
+   }
+
+   .media1024 {
+      flex-direction: column;
+      margin-top: -50px;
+   }
+
+   .form>h2 {
+      font-size: 28px !important;
+      margin-bottom: -10px;
+   }
+
+   .general {
+      margin: -5px;
+   }
+
+   .text {
+      width: 290px;
+      padding: 0;
+   }
+
+   .flex-left {
+      margin-left: 0;
+   }
+
+   .form {
+      margin: 0 auto;
+      max-width: 250px;
+      max-height: 600px;
+      border: 1px solid #000;
+   }
+
+   .flex-right {
+      margin-right: 0;
+   }
+
+
+
+   input[type="text"],
+   input[type="number"] {
+      max-width: 220px;
+      height: 50px;
+
+   }
+
+   .info {
+      flex-direction: column;
+   }
+
+   .card-top>p {
+      margin-top: 70%;
    }
 }
