--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,7 @@ input[type="checkbox"] {
    }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width:425px) {
    .tel1 {
       display: block;
       padding-left: 10px;
@@ -912,7 +912,7 @@ input[type="checkbox"] {
    }
 
    .text {
-      width: 290px;
+      width: 100%;
       padding: 0;
    }
 
@@ -922,20 +922,15 @@ input[type="checkbox"] {
 
    .form {
       margin: 0 auto;
-      max-width: 250px;
+      max-width: 500px;
       max-height: 600px;
       border: 1px solid #000;
+
    }
-
-   .flex-right {
-      margin-right: 0;
-   }
-
-
 
    input[type="text"],
    input[type="number"] {
-      max-width: 220px;
+      max-width: 320px;
       height: 50px;
 
    }
