--- a/css/style.css
+++ b/css/style.css
@@ -943,3 +943,37 @@ input[type="checkbox"] {
       margin-top: 70%;
    }
 }
+
+@media screen and (max-width:375px) {
+   .form {
+      margin: 0 auto;
+      max-width: 300px;
+      max-height: 600px;
+      border: 1px solid #000;
+
+   }
+
+   input[type="text"],
+   input[type="number"] {
+      max-width: 250px;
+      height: 50px;
+
+   }
+}
+
+@media screen and (max-width:320px) {
+   .form {
+      margin: 0 auto;
+      max-width: 250px;
+      max-height: 600px;
+      border: 1px solid #000;
+
+   }
+
+   input[type="text"],
+   input[type="number"] {
+      max-width: 220px;
+      height: 50px;
+
+   }
+}
